--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(BinaryTree CXX)
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
     add_custom_target(doxygen ALL
-        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile
         ${DOXYGEN_EXECUTABLE}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         COMMENT "Generating API documentation with Doxygen" VERBATIM
+        SOURCES Doxyfile
     )
 endif(DOXYGEN_FOUND)
 
